styles/styles.css
/* ... */
.name {
  text-wrap: nowrap;
  margin: 0;
  font-weight: bold;
}

.role {
  margin: 0;
}

.italic {
  margin: 0;
  font-style: italic;
}

.hover-underline a {
  position: relative;
  display: inline-block;
}

.hover-underline a::after {
  content: "";
  position: absolute;
  width: calc(100% - 32px);
  transform: scaleX(0);
  height: 1px;
  bottom: 5px;
  left: 16px;
  background-color: var(--font-color-primary);
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.hover-underline.logo a::after {
  width: 100%;
}

.hover-underline a.button::after {
  content: none;
}

.hover-underline a:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

.navigation-items {
  display: flex;
  padding: 0;
  margin: 0;
  align-items: center;
  margin-left: auto;
  margin-right: 3rem;
  justify-content: space-between;
}

.navigation-item {
  margin: var(--spacing-1);
  padding-left: var(--spacing-3);
  padding-right: var(--spacing-3);
}

.nav-logo {
  display: none;
}

.navigation-items .logo-svg {
  display: none;
}

.light-mode .logo-svg {
  filter: invert(100%);
}

input,
textarea {
  box-sizing: border-box;
  border: 2px solid var(--font-color-secondary);
  color: var(--font-color-primary);
  position: relative;
  border-radius: var(--border-radius-box);
  padding: var(--spacing-3);
  margin-left: var(--spacing-3);
  width: 90%;
  outline: none;
  background-color: var(--background-opacity);
  font-family: var(--font-family-secondary);
}

label {
  padding-left: var(--spacing-3);
}

input:focus,
textarea:focus {
  border: 2px solid var(--accent-primary);
}

.contact-details {
  width: 80%;
  margin: auto;
}

a {
  padding-left: var(--spacing-3);
  padding-right: var(--spacing-3);
  display: block;
}

button,
a.button {
  border-radius: 20px;
  border: 1px solid var(--font-color-primary);
  color: var(--font-color-primary);
  justify-content: center;
  margin: var(--spacing-3);
  display: flex;
  padding: var(--spacing-1) 0;
  width: 8rem;
  text-align: center;
  align-items: center;
  font-family: var(--font-family-secondary);
  font-size: 1rem;
  background: transparent;
  transition: all 0.4s ease-in-out;
}

.button:hover {
  color: var(--font-color-secondary);
  background-color: var(--accent-primary);
  border-radius: 20px;
  cursor: pointer;
  text-decoration: none;
  background-position: top left 100%;
}

a.button-inverted {
  color: var(--font-color-secondary);
  border: 1px solid var(--font-color-secondary);
}

a.button-inverted:hover {
  color: var(--font-color-primary);
  background-color: var(--accent-secondary);
}

.dark-mode-button {
  position: fixed;
  bottom: 0;
  right: 0;
  background-color: var(--accent-secondary);
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 100%;
}

#skills i {
  margin: auto;
  font-size: 3rem;
}

.team-member-image {
  position: relative;
}

.team-member-image img {
  filter: grayscale(100%);
  width: 90%;
  height: 90%;
}

.icon-before::before,
.icon-after::after {
  display: inline-block;
  vertical-align: middle;
  font-size: 2rem;
  font-family: "Material Icons Outlined";
  font-style: normal;
  font-weight: 400;
  padding: 0 var(--spacing-3);
  color: var(--accent-secondary);
}

.icon-arrow-right::before {
  content: "\e5cc";
  font-size: 1.5rem;
  position: absolute;
  left: 0;
  padding-left: 0;
  color: var(--accent-primary);
}

.skill-wrap {
  text-align: center;
  margin: auto 0;
}

.skill-wrap span:first-child {
  z-index: 2;
  display: block;
}

.skill-wrap span:last-child {
  z-index: 1;
  display: block;
  padding: var(--spacing-1) 0 0 0;
  color: var(--font-color-primary);
  margin: auto;
  font-size: 1rem;
  text-align: center;
  opacity: 0;
  -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
  -moz-transition: -moz-transform 0.3s, opacity 0.3s;
  transition: transform 0.3s, opacity 0.3s;
  -webkit-transform: translateY(-100%);
  -moz-transform: translateY(-100%);
  transform: translateY(-100%);
}
.skill-wrap:hover span:last-child,
.skill-wrap:focus span:last-child {
  opacity: 1;
  -webkit-transform: translateY(0%);
  -moz-transform: translateY(0%);
  transform: translateY(0%);
}
/* ... */

